fixed layout bug of safari and mobile safari

--- a/page/index.css
+++ b/page/index.css
@@ -79,9 +79,8 @@
 	margin-left: -10px;
 }
 .kv-buttons-list > li {
-	flex-basis: 50%;
+	flex: 1 1 50%;
 	display: flex;
-	flex-direction: column;
 	padding-left: 10px;
 }
 .kv-buttons-list > li > a {
